adds qualitative metrics to workflow

--- a/docs/tables/metric_data.tex
+++ b/docs/tables/metric_data.tex
@@ -1,47 +1,47 @@
-\begin{tabular}{lrrrrrrrrrrr}
+\begin{tabular}{lrrrrrrrrrrrrrrrrr}
 \toprule
-EG & Mass \acs{snf}+\acs{hlw} & Activity at 100 years & Activity at 100k years & Mass \acs{du}+\acs{ru}+\acs{rth}& Volume \acs{llw} & Land use & Water use & \acs{co2eq} emissions & Worker dose & Mass natural uranium & Mass natural thorium \\
-& [t/GWe-yr] & [Ci/GWe-yr] & [Ci/GWe-yr] & [t/GWe-yr] & [m3] & [km2/GWe-yr] & [ML/GWe-yr] & [kt\acs{co2eq}/GWe-yr] & [person-mSv/GWe-yr] & [t/GWe-yr] & [t/GWe-yr] \\
+ & mass snf hlw disposal [t/GWe-yr] & activity at 100 yrs [Ci/GWe-yr] & activity at 100k years [Ci/GWe-yr] & mass du ru rth disposal [t/GWe-yr] & volume llw disposal [m3] & safety challenges [Data] & land use [km2/GWe-yr] & water use [ML/GWe-yr] & carbon dioxide emissions [CO2/GWe-yr] & total worker dose [person-mSv/GWe-yr] & natural uranium required [t/GWe-yr] & natural thorium utilization [t/GWe-yr] & development cost [Data] & development time [Data] & foak cost [Data] & compatibility [Data] & familiarity [Data] \\
+EG &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
 \midrule
-EG01 & 21.92 & 1340000.00 & 1650.00 & 166.67 & 398.84 & 0.17 & 23891.00 & 44.10 & 1.10 & 188.63 & 0.00 \\
-EG02 & 9.22 & 1430000.00 & 2050.00 & 296.48 & 414.23 & 0.21 & 23994.00 & 54.90 & 1.28 & 305.73 & 0.00 \\
-EG03 & 147.57 & 1340000.00 & 2460.00 & 0.00 & 373.00 & 0.25 & 23924.00 & 87.10 & 2.41 & 147.87 & 0.00 \\
-EG04 & 3.99 & 805000.00 & 1640.00 & 0.00 & 278.60 & 0.08 & 23706.00 & 13.50 & 1.22 & 4.00 & 0.00 \\
-EG05 & 11.41 & 1390000.00 & 7380.00 & 282.41 & 412.58 & 0.21 & 23981.00 & 53.90 & 1.27 & 289.20 & 4.65 \\
-EG06 & 9.86 & 1770000.00 & 13000.00 & 0.00 & 835.32 & 0.12 & 31308.00 & 59.10 & 2.81 & 0.00 & 9.88 \\
-EG07 & 31.97 & 1780000.00 & 9480.00 & 0.00 & 342.20 & 0.17 & 37831.00 & 45.70 & 4.54 & 32.03 & 0.00 \\
-EG08 & 1.62 & 909000.00 & 1690.00 & 0.00 & 826.47 & 0.11 & 33640.00 & 25.40 & 2.93 & 0.00 & 1.62 \\
-EG09 & 2.24 & 882000.00 & 942.00 & 0.00 & 359.00 & 0.08 & 23709.00 & 17.50 & 1.21 & 2.25 & 0.00 \\
-EG10 & 10.84 & 1420000.00 & 10800.00 & 0.00 & 2796.69 & 0.10 & 23767.00 & 79.50 & 0.61 & 0.00 & 10.86 \\
-EG11 & 4.54 & 1020000.00 & 9140.00 & 104.29 & 401.01 & 0.13 & 23810.00 & 31.80 & 1.40 & 106.80 & 2.05 \\
-EG12 & 7.27 & 1400000.00 & 1420.00 & 104.96 & 1646.12 & 0.14 & 23912.00 & 113.30 & 2.02 & 112.46 & 0.00 \\
-EG13 & 3.42 & 1330000.00 & 1320.00 & 167.69 & 621.88 & 0.16 & 23897.00 & 52.70 & 1.12 & 171.16 & 0.00 \\
-EG14 & 8.34 & 1140000.00 & 1240.00 & 0.00 & 618.99 & 0.09 & 23728.00 & 28.50 & 1.18 & 8.38 & 0.00 \\
-EG15 & 2.11 & 1240000.00 & 1140.00 & 169.81 & 611.53 & 0.15 & 23881.00 & 48.80 & 1.12 & 171.96 & 0.00 \\
-EG16 & 1.52 & 1260000.00 & 1030.00 & 175.99 & 630.76 & 0.15 & 24495.00 & 50.90 & 1.26 & 177.56 & 0.00 \\
-EG17 & 3.37 & 1330000.00 & 3090.00 & 170.88 & 624.09 & 0.15 & 23883.00 & 49.90 & 1.10 & 172.41 & 1.88 \\
-EG18 & 6.95 & 1450000.00 & 6950.00 & 148.60 & 567.72 & 0.15 & 23861.00 & 43.90 & 1.04 & 152.16 & 3.42 \\
-EG19 & 2.59 & 1140000.00 & 765.00 & 65.54 & 2134.12 & 0.12 & 23897.00 & 127.90 & 2.04 & 68.41 & 0.00 \\
-EG20 & 2.61 & 1050000.00 & 557.00 & 69.36 & 2343.80 & 0.12 & 23909.00 & 134.90 & 2.06 & 72.26 & 0.00 \\
-EG21 & 1.46 & 1140000.00 & 800.00 & 157.51 & 678.04 & 0.14 & 23874.00 & 51.10 & 1.05 & 159.02 & 0.00 \\
-EG22 & 1.39 & 994000.00 & 581.00 & 175.42 & 691.19 & 0.15 & 23891.00 & 53.30 & 1.08 & 176.86 & 0.00 \\
-EG23 & 1.31 & 1030000.00 & 728.00 & 0.00 & 549.49 & 0.08 & 23717.00 & 24.10 & 1.21 & 1.34 & 0.00 \\
-EG24 & 1.34 & 1040000.00 & 606.00 & 0.00 & 561.42 & 0.08 & 23717.00 & 24.10 & 1.21 & 1.37 & 0.00 \\
-EG25 & 1.51 & 1300000.00 & 864.00 & 112.81 & 853.46 & 0.13 & 23839.00 & 51.50 & 0.95 & 113.54 & 0.85 \\
-EG26 & 1.25 & 1300000.00 & 1370.00 & 0.00 & 2830.60 & 0.09 & 23762.00 & 77.30 & 0.55 & 0.00 & 1.25 \\
-EG27 & 2.25 & 1300000.00 & 3620.00 & 184.74 & 1160.73 & 0.16 & 23909.00 & 67.30 & 1.54 & 186.62 & 0.45 \\
-EG28 & 1.58 & 1180000.00 & 3010.00 & 0.00 & 1168.72 & 0.09 & 23748.00 & 50.10 & 1.24 & 0.00 & 1.68 \\
-EG29 & 1.45 & 1130000.00 & 917.00 & 0.00 & 662.22 & 0.08 & 23725.00 & 30.50 & 1.02 & 1.49 & 0.00 \\
-EG30 & 1.30 & 954000.00 & 571.00 & 0.00 & 602.99 & 0.08 & 23719.00 & 26.10 & 1.14 & 1.33 & 0.00 \\
-EG31 & 1.37 & 1180000.00 & 697.00 & 136.55 & 567.85 & 0.13 & 23847.00 & 42.70 & 1.13 & 137.96 & 0.00 \\
-EG32 & 1.32 & 1080000.00 & 519.00 & 127.15 & 579.27 & 0.13 & 23838.00 & 41.60 & 1.13 & 128.50 & 0.00 \\
-EG33 & 1.59 & 1220000.00 & 879.00 & 0.00 & 753.51 & 0.10 & 27521.00 & 39.10 & 2.84 & 1.64 & 0.00 \\
-EG34 & 1.50 & 1070000.00 & 669.00 & 0.00 & 696.42 & 0.09 & 27104.00 & 38.20 & 2.70 & 1.55 & 0.00 \\
-EG35 & 1.42 & 1200000.00 & 741.00 & 163.92 & 621.45 & 0.15 & 24957.00 & 49.50 & 1.43 & 165.37 & 0.00 \\
-EG36 & 1.39 & 1020000.00 & 535.00 & 149.10 & 735.16 & 0.14 & 23887.00 & 49.70 & 1.14 & 150.54 & 0.00 \\
-EG37 & 1.33 & 1120000.00 & 762.00 & 23.42 & 624.52 & 0.09 & 23717.00 & 31.90 & 1.01 & 24.36 & 0.43 \\
-EG38 & 1.79 & 1270000.00 & 3170.00 & 0.00 & 1518.73 & 0.09 & 23770.00 & 67.00 & 1.18 & 0.00 & 1.93 \\
-EG39 & 1.40 & 1300000.00 & 763.00 & 114.17 & 677.49 & 0.13 & 24623.00 & 41.70 & 1.14 & 114.85 & 0.75 \\
-EG40 & 1.47 & 1490000.00 & 1280.00 & 0.00 & 592.98 & 0.09 & 27306.00 & 29.40 & 1.49 & 0.00 & 1.51 \\
+EG01 & 21.92 & 1340000.00 & 1650.00 & 166.67 & 398.84 & 0.00 & 0.17 & 23891.00 & 44.10 & 1.10 & 188.63 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
+EG02 & 9.22 & 1430000.00 & 2050.00 & 296.48 & 414.23 & 0.00 & 0.21 & 23994.00 & 54.90 & 1.28 & 305.73 & 0.00 & 1.00 & 1.00 & 1.00 & 0.00 & 0.00 \\
+EG03 & 147.57 & 1340000.00 & 2460.00 & 0.00 & 373.00 & 0.00 & 0.25 & 23924.00 & 87.10 & 2.41 & 147.87 & 0.00 & 0.00 & 0.00 & 0.00 & 1.00 & 1.00 \\
+EG04 & 3.99 & 805000.00 & 1640.00 & 0.00 & 278.60 & 0.00 & 0.08 & 23706.00 & 13.50 & 1.22 & 4.00 & 0.00 & 2.00 & 2.00 & 2.00 & 2.00 & 2.00 \\
+EG05 & 11.41 & 1390000.00 & 7380.00 & 282.41 & 412.58 & 0.00 & 0.21 & 23981.00 & 53.90 & 1.27 & 289.20 & 4.65 & 1.00 & 1.00 & 1.00 & 3.00 & 3.00 \\
+EG06 & 9.86 & 1770000.00 & 13000.00 & 0.00 & 835.32 & 1.00 & 0.12 & 31308.00 & 59.10 & 2.81 & 0.00 & 9.88 & 3.00 & 2.00 & 3.00 & 2.00 & 3.00 \\
+EG07 & 31.97 & 1780000.00 & 9480.00 & 0.00 & 342.20 & 1.00 & 0.17 & 37831.00 & 45.70 & 4.54 & 32.03 & 0.00 & 3.00 & 2.00 & 3.00 & 2.00 & 3.00 \\
+EG08 & 1.62 & 909000.00 & 1690.00 & 0.00 & 826.47 & 1.00 & 0.11 & 33640.00 & 25.40 & 2.93 & 0.00 & 1.62 & 3.00 & 2.00 & 3.00 & 2.00 & 3.00 \\
+EG09 & 2.24 & 882000.00 & 942.00 & 0.00 & 359.00 & 0.00 & 0.08 & 23709.00 & 17.50 & 1.21 & 2.25 & 0.00 & 3.00 & 2.00 & 4.00 & 2.00 & 3.00 \\
+EG10 & 10.84 & 1420000.00 & 10800.00 & 0.00 & 2796.69 & 0.00 & 0.10 & 23767.00 & 79.50 & 0.61 & 0.00 & 10.86 & 3.00 & 2.00 & 4.00 & 2.00 & 3.00 \\
+EG11 & 4.54 & 1020000.00 & 9140.00 & 104.29 & 401.01 & 0.00 & 0.13 & 23810.00 & 31.80 & 1.40 & 106.80 & 2.05 & 3.00 & 2.00 & 4.00 & 2.00 & 3.00 \\
+EG12 & 7.27 & 1400000.00 & 1420.00 & 104.96 & 1646.12 & 0.00 & 0.14 & 23912.00 & 113.30 & 2.02 & 112.46 & 0.00 & 4.00 & 3.00 & 3.00 & 1.00 & 2.00 \\
+EG13 & 3.42 & 1330000.00 & 1320.00 & 167.69 & 621.88 & 0.00 & 0.16 & 23897.00 & 52.70 & 1.12 & 171.16 & 0.00 & 4.00 & 3.00 & 3.00 & 3.00 & 2.00 \\
+EG14 & 8.34 & 1140000.00 & 1240.00 & 0.00 & 618.99 & 0.00 & 0.09 & 23728.00 & 28.50 & 1.18 & 8.38 & 0.00 & 2.00 & 2.00 & 4.00 & 1.00 & 2.00 \\
+EG15 & 2.11 & 1240000.00 & 1140.00 & 169.81 & 611.53 & 0.00 & 0.15 & 23881.00 & 48.80 & 1.12 & 171.96 & 0.00 & 2.00 & 2.00 & 3.00 & 3.00 & 2.00 \\
+EG16 & 1.52 & 1260000.00 & 1030.00 & 175.99 & 630.76 & 1.00 & 0.15 & 24495.00 & 50.90 & 1.26 & 177.56 & 0.00 & 3.00 & 2.00 & 4.00 & 3.00 & 3.00 \\
+EG17 & 3.37 & 1330000.00 & 3090.00 & 170.88 & 624.09 & 0.00 & 0.15 & 23883.00 & 49.90 & 1.10 & 172.41 & 1.88 & 2.00 & 2.00 & 4.00 & 3.00 & 3.00 \\
+EG18 & 6.95 & 1450000.00 & 6950.00 & 148.60 & 567.72 & 0.00 & 0.15 & 23861.00 & 43.90 & 1.04 & 152.16 & 3.42 & 3.00 & 2.00 & 4.00 & 3.00 & 3.00 \\
+EG19 & 2.59 & 1140000.00 & 765.00 & 65.54 & 2134.12 & 0.00 & 0.12 & 23897.00 & 127.90 & 2.04 & 68.41 & 0.00 & 4.00 & 3.00 & 3.00 & 1.00 & 2.00 \\
+EG20 & 2.61 & 1050000.00 & 557.00 & 69.36 & 2343.80 & 0.00 & 0.12 & 23909.00 & 134.90 & 2.06 & 72.26 & 0.00 & 3.00 & 2.00 & 4.00 & 1.00 & 3.00 \\
+EG21 & 1.46 & 1140000.00 & 800.00 & 157.51 & 678.04 & 0.00 & 0.14 & 23874.00 & 51.10 & 1.05 & 159.02 & 0.00 & 4.00 & 3.00 & 3.00 & 3.00 & 2.00 \\
+EG22 & 1.39 & 994000.00 & 581.00 & 175.42 & 691.19 & 0.00 & 0.15 & 23891.00 & 53.30 & 1.08 & 176.86 & 0.00 & 3.00 & 2.00 & 4.00 & 3.00 & 3.00 \\
+EG23 & 1.31 & 1030000.00 & 728.00 & 0.00 & 549.49 & 0.00 & 0.08 & 23717.00 & 24.10 & 1.21 & 1.34 & 0.00 & 2.00 & 2.00 & 3.00 & 2.00 & 2.00 \\
+EG24 & 1.34 & 1040000.00 & 606.00 & 0.00 & 561.42 & 0.00 & 0.08 & 23717.00 & 24.10 & 1.21 & 1.37 & 0.00 & 3.00 & 2.00 & 4.00 & 2.00 & 3.00 \\
+EG25 & 1.51 & 1300000.00 & 864.00 & 112.81 & 853.46 & 0.00 & 0.13 & 23839.00 & 51.50 & 0.95 & 113.54 & 0.85 & 3.00 & 2.00 & 4.00 & 2.00 & 3.00 \\
+EG26 & 1.25 & 1300000.00 & 1370.00 & 0.00 & 2830.60 & 0.00 & 0.09 & 23762.00 & 77.30 & 0.55 & 0.00 & 1.25 & 3.00 & 2.00 & 4.00 & 2.00 & 3.00 \\
+EG27 & 2.25 & 1300000.00 & 3620.00 & 184.74 & 1160.73 & 0.00 & 0.16 & 23909.00 & 67.30 & 1.54 & 186.62 & 0.45 & 3.00 & 2.00 & 4.00 & 2.00 & 3.00 \\
+EG28 & 1.58 & 1180000.00 & 3010.00 & 0.00 & 1168.72 & 0.00 & 0.09 & 23748.00 & 50.10 & 1.24 & 0.00 & 1.68 & 3.00 & 2.00 & 4.00 & 2.00 & 3.00 \\
+EG29 & 1.45 & 1130000.00 & 917.00 & 0.00 & 662.22 & 0.00 & 0.08 & 23725.00 & 30.50 & 1.02 & 1.49 & 0.00 & 2.00 & 2.00 & 4.00 & 1.00 & 2.00 \\
+EG30 & 1.30 & 954000.00 & 571.00 & 0.00 & 602.99 & 0.00 & 0.08 & 23719.00 & 26.10 & 1.14 & 1.33 & 0.00 & 3.00 & 2.00 & 4.00 & 1.00 & 3.00 \\
+EG31 & 1.37 & 1180000.00 & 697.00 & 136.55 & 567.85 & 0.00 & 0.13 & 23847.00 & 42.70 & 1.13 & 137.96 & 0.00 & 2.00 & 2.00 & 3.00 & 1.00 & 2.00 \\
+EG32 & 1.32 & 1080000.00 & 519.00 & 127.15 & 579.27 & 0.00 & 0.13 & 23838.00 & 41.60 & 1.13 & 128.50 & 0.00 & 3.00 & 2.00 & 4.00 & 1.00 & 3.00 \\
+EG33 & 1.59 & 1220000.00 & 879.00 & 0.00 & 753.51 & 1.00 & 0.10 & 27521.00 & 39.10 & 2.84 & 1.64 & 0.00 & 3.00 & 2.00 & 4.00 & 1.00 & 3.00 \\
+EG34 & 1.50 & 1070000.00 & 669.00 & 0.00 & 696.42 & 1.00 & 0.09 & 27104.00 & 38.20 & 2.70 & 1.55 & 0.00 & 5.00 & 2.00 & 4.00 & 1.00 & 3.00 \\
+EG35 & 1.42 & 1200000.00 & 741.00 & 163.92 & 621.45 & 1.00 & 0.15 & 24957.00 & 49.50 & 1.43 & 165.37 & 0.00 & 3.00 & 2.00 & 4.00 & 3.00 & 3.00 \\
+EG36 & 1.39 & 1020000.00 & 535.00 & 149.10 & 735.16 & 1.00 & 0.14 & 23887.00 & 49.70 & 1.14 & 150.54 & 0.00 & 5.00 & 2.00 & 4.00 & 3.00 & 3.00 \\
+EG37 & 1.33 & 1120000.00 & 762.00 & 23.42 & 624.52 & 0.00 & 0.09 & 23717.00 & 31.90 & 1.01 & 24.36 & 0.43 & 3.00 & 2.00 & 4.00 & 1.00 & 3.00 \\
+EG38 & 1.79 & 1270000.00 & 3170.00 & 0.00 & 1518.73 & 1.00 & 0.09 & 23770.00 & 67.00 & 1.18 & 0.00 & 1.93 & 3.00 & 2.00 & 4.00 & 1.00 & 3.00 \\
+EG39 & 1.40 & 1300000.00 & 763.00 & 114.17 & 677.49 & 1.00 & 0.13 & 24623.00 & 41.70 & 1.14 & 114.85 & 0.75 & 5.00 & 2.00 & 4.00 & 3.00 & 3.00 \\
+EG40 & 1.47 & 1490000.00 & 1280.00 & 0.00 & 592.98 & 1.00 & 0.09 & 27306.00 & 29.40 & 1.49 & 0.00 & 1.51 & 5.00 & 2.00 & 4.00 & 3.00 & 3.00 \\
 \bottomrule
 \end{tabular}
